[package]
name = "my-blog-server-svelte"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
futures = "0.3.30"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"]}
dotenv = "0.15.0"
